--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'wasm-unsafe-eval';" />
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'wasm-unsafe-eval';" />
     <link rel="icon" type="image/x-icon" href="/img/png/icon16.png" />
     <link rel="preload" href="/fonts/goblin.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/goblin.woff" as="font" type="font/woff" crossorigin>
