--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/img/png/icon16.png" />
     <link rel="preload" href="/fonts/goblin.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/goblin.woff" as="font" type="font/woff" crossorigin>
-    <title>Speed Looter</title>
+    <title>Dungeon Request</title>
   </head>
   <body style="background-color: #000;">
     <div id="app"></div>
